# Thesis

./: .gitignore  README.md  demo.csv  demo_ts.csv  opts.json  pyproject.toml
.github/workflows/: ci.yml
forecast_lab/: __init__.py  controller.py  dataio.py  metrics.py  registry.py  ui_widgets.py
forecast_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
forecast_lab/models/: __init__.py  chronos.py  chronos2.py  chronosbolt.py  lstm.py  moirai2.py  prophet.py  sundial.py  timegpt.py  timesfm2p5.py  tirex.py  toto.py
forecast_lab/preprocess/: adam.py
scripts/: bench.py  run.py
tests/: test_registry.py
